--- a/index.html
+++ b/index.html
@@ -56,31 +56,45 @@
             </div>
             <div class="row">
                 <div class="col-12 d-flex justify-content-center"> 
-                    <a href="#" ><button type="button" class="btn btn-light">ISTRAŽI</button></a>
+                    <a href="proizvodi.html" ><button type="button" class="btn btn-light">ISTRAŽI</button></a>
                 </div>
             </div>
         </div>
-        <div class="container-fluid">
+        <!-- <div class="container-fluid">
             <div class="row mt-5">
                 <div class="col-lg-9 mx-auto">
                     <div class="row">
                         <h5 class="text-center">Novosti</h5>
                     </div>
-                        <div class="row swiper mySwiper">
-                            <div class="swiper-wrapper" id="novosti">
-                              <div class="swiper-slide">Slide 1</div>
-                            </div>
-                            <div class="swiper-button-next"></div>
-                            <div class="swiper-button-prev"></div>
-                            <div class="swiper-pagination"></div>
-                          </div>
-                    </div>
+                    <div class="swiper mySwiper">
+                        <div class="swiper-wrapper" id="novosti">
+                        </div>
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-pagination"></div>
+                      </div>
+                </div>
             </div>
         </div>
         <div class="container-fluid">
             <div class="row flex-wrap" id="precice"></div>
-        </div>
+        </div> -->
     </div>
+    <footer>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-3">
+
+                </div>
+                <div class="col-lg-3">
+                    
+                </div>
+                <div class="col-lg-3">
+                    
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="index.js"></script>
