--- a/korpa.html
+++ b/korpa.html
@@ -42,101 +42,8 @@
         </div>
     </header>
     <div id="drzac">
-        <h1 class="text-center mt-5">Moja korpa</h1>
-        <div class="container-fluid mt-5">
-            <div id="bar">
-                <div class="col-lg-2">
-                    <p class="fs-5 text-center">PROIZVOD</p>
-                </div>
-                <div class="col-lg-2">
-                    <p class="fs-5 text-center">CENA</p>
-                </div>
-                <div class="col-lg-1">
-                    <p class="fs-5 text-center">POPUST</p>
-                </div>
-                <div class="col-lg-2">
-                    <p class="fs-5 text-center">CENA SA POPUSTOM</p>
-                </div>
-                <div class="col-lg-1">
-                    <p class="fs-5 text-center">KOLIČINA</p>
-                </div>
-                <div class="col-lg-1">
-                    <p class="fs-5 text-center">UKUPNO</p>
-                </div>
-            </div>
-            <div class="row mb-5 border border-4 align-items-center">
-                <div class="col-lg-2">
-                    <img src="assets/img/bez pantalone cavalry.jpg" alt="Bez pantalone" class="korpaimg">
-                </div>
-                <div class="col-lg-2">
-                    <p class="fs-5 text-center">PANTALONE</p>
-                </div>
-                <div class="col-lg-2">
-                    <p class="fs-5 text-center ms-3">21.590,00 RSD</p>
-                </div>
-                <div class="col-lg-1">
-                    <p class="fs-5 text-center ms-2">31%</p>
-                </div>
-                <div class="col-lg-2">
-                    <p class="fs-5 text-center">10.999,00 RSD</p>
-                </div>
-                <div class="col-lg-1">
-                    <select name="kolicina" id="kolicina" class="form-control">
-                        <option value="1" class="text-center">1</option>
-                        <option value="2" class="text-center">2</option>
-                        <option value="3" class="text-center">3</option>
-                        <option value="4" class="text-center">4</option>
-                        <option value="5" class="text-center">5</option>
-                        <option value="6" class="text-center">6</option>
-                        <option value="7" class="text-center">7</option>
-                        <option value="8" class="text-center">8</option>
-                        <option value="9" class="text-center">9</option>
-                    </select>
-                </div>
-                <div class="col-lg-1">
-                    <p class="fs-5 text-center ms-4">10.999,00 RSD</p>
-                </div>
-                <div class="col-lg-1">
-                    <button class="form-control">Izbriši</button>
-                </div>
-            </div>
-            <div class="row mb-5 border border-4 align-items-center">
-                <div class="col-lg-2">
-                    <img src="assets/img/muski sako sa duplim kopcanjem.jpg" alt="Muski sako" class="korpaimg">
-                </div>
-                <div class="col-lg-2">
-                    <p class="fs-5 text-center">SAKO</p>
-                </div>
-                <div class="col-lg-2">
-                    <p class="fs-5 text-center ms-3">20.280,00 RSD</p>
-                </div>
-                <div class="col-lg-1">
-                    <p class="fs-5 text-center ms-2">36%</p>
-                </div>
-                <div class="col-lg-2">
-                    <p class="fs-5 text-center">12.999,00 RSD</p>
-                </div>
-                <div class="col-lg-1">
-                    <select name="kolicina" id="kolicina" class="form-control">
-                        <option value="1" class="text-center">1</option>
-                        <option value="2" class="text-center">2</option>
-                        <option value="3" class="text-center">3</option>
-                        <option value="4" class="text-center">4</option>
-                        <option value="5" class="text-center">5</option>
-                        <option value="6" class="text-center">6</option>
-                        <option value="7" class="text-center">7</option>
-                        <option value="8" class="text-center">8</option>
-                        <option value="9" class="text-center">9</option>
-                    </select>
-                </div>
-                <div class="col-lg-1">
-                    <p class="fs-5 text-center ms-4">12.999,00 RSD</p>
-                </div>
-                <div class="col-lg-1">
-                    <button class="form-control">Izbriši</button>
-                </div>
-            </div>
-        </div>
+        <div id="tekstDrzac"></div>
+            <div id="proizvodi" class="container-fluid"></div>
         <div class="container">
             <div class="row justify-content-center mt-5 mb-5">
                 <div class="col-lg-6">
