--- a/proizvodi.html
+++ b/proizvodi.html
@@ -37,6 +37,7 @@
                     <h1 class="fs-3 text-center mt-1">DAN JHON</h1>
                 </div>
                 <div class="col-3 d-flex justify-content-end">
+                    <div id="brojProizvoda"></div>
                     <a href="korpa.html" class="text-dark"><i class="fa-solid fa-bag-shopping fs-4 me-3 mt-2"></i></a>
                     <i class="fa-solid fa-magnifying-glass fs-4 mt-2"></i>
                 </div>
