--- a/proizvodi.html
+++ b/proizvodi.html
@@ -47,15 +47,15 @@
             <div class="row mt-3 justify-content-start" id="ddlFilter">
                 <div class="col-lg-2"><p class="fs-4">Filtriraj po :</p></div>
                 <div class="col-lg-2">
-                    <select name="ddlFilterBoja" id="ddlFilterBoja" class="form-control">
+                    <select name="ddlFilterBoja" id="ddlFilterBoja" class="form-control ddlFilter">
                     </select>
                 </div>
                 <div class="col-lg-2">
-                    <select name="ddlFilterKategorija" id="ddlFilterKategorija" class="form-control">
+                    <select name="ddlFilterKategorija" id="ddlFilterKategorija" class="form-control ddlFilter">
                     </select>
                 </div>
                 <div class="col-lg-2">
-                    <select name="ddlFilterMaterijal" id="ddlFilterMaterijal" class="form-control">
+                    <select name="ddlFilterMaterijal" id="ddlFilterMaterijal" class="form-control ddlFilter">
                     </select>
                 </div>
             </div>
@@ -67,10 +67,8 @@
                 </div>
             </div>
         </div>
-        
     </header>
     <div class="container-fluid" id="ispisProizvoda">
-
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
