--- a/korpa.html
+++ b/korpa.html
@@ -48,6 +48,8 @@
             <div class="row justify-content-center mt-5 mb-5">
                 <div class="col-lg-6">
                     <form action="POST" id="forma">
+                        <!-- <input type="button" value="Potvrdi" id="submit" class="form-control mt-2 border border-5"> -->
+                        
                     </form>
                 </div>
             </div>
