--- a/index.html
+++ b/index.html
@@ -60,37 +60,12 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="container-fluid">
-            <div class="row mt-5">
-                <div class="col-lg-9 mx-auto">
-                    <div class="row">
-                        <h5 class="text-center">Novosti</h5>
-                    </div>
-                    <div class="swiper mySwiper">
-                        <div class="swiper-wrapper" id="novosti">
-                        </div>
-                        <div class="swiper-button-next"></div>
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-pagination"></div>
-                      </div>
-                </div>
-            </div>
-        </div>
-        <div class="container-fluid">
-            <div class="row flex-wrap" id="precice"></div>
-        </div> -->
     </div>
     <footer>
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-3">
-
-                </div>
-                <div class="col-lg-3">
-                    
-                </div>
-                <div class="col-lg-3">
-                    
+            <div class="row bg-black justify-content-center pb-2 pt-2">
+                <div class="col-lg-2">
+                    <a href="dokumentacija.docx" class="text-light text-decoration-none fs-5">Dokumentacija</a>
                 </div>
             </div>
         </div>
