--- a/autor.html
+++ b/autor.html
@@ -58,6 +58,15 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="container-fluid">
+            <div class="row bg-black justify-content-center pb-2 pt-2">
+                <div class="col-lg-2">
+                    <a href="dokumentacija.docx" class="text-light text-decoration-none fs-5">Dokumentacija</a>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="autor.js"></script>
